Bug 38162 - Every minutes, the ieee80211 ph0: wl_ops_bss_info_changed: BSS idle: true (implement) is shown in syslog
Summary: Every minutes, the ieee80211 ph0: wl_ops_bss_info_changed: BSS idle: true (im...
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: network-wireless (show other bugs)
Hardware: All Linux
: P1 low
Assignee: Roland Vossen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-23 21:09 UTC by David Hill
Modified: 2012-06-13 15:09 UTC (History)
6 users (show)

See Also:
Kernel Version: 3.0.0-rc4+ (and previous versions probably)
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description David Hill 2011-06-23 21:09:22 UTC
Hi guys,

    The following 2 lines are shown every minutes in syslog:
 ieee80211 ph0: wl_ops_bss_info_changed: BSS idle: true (implement)
 ieee80211 ph0: wl_ops_bss_info_changed: BSS idle: false (implement)


This is caused by the following lines:
        if (changed & BSS_CHANGED_IDLE) {
                /* Idle changed for this BSS/interface */
                wiphy_err(wiphy, "%s: BSS idle: %s (implement)\n", __func__,
                          info->idle ? "true" : "false");
        }


Once a wireless connection is started, those messages disappear.
Comment 1 Luca 2011-06-26 09:37:29 UTC
This seems to be a bug in the broadcom driver, not wl12xx.  The file in question is this:

drivers/staging/brcm80211/brcmsmac/wl_mac80211.c

I don't know who this bug should be assigned to, but I don't think it's me. :)
Comment 2 John W. Linville 2011-06-26 12:33:29 UTC
Ooops -- sorry!
Comment 3 Luca 2011-06-26 15:30:37 UTC
Just as a side-note to the new bug owner, we get out of idle when we start scanning, so this warning seems wrong.  I guess this explains why this happens every minute, most likely network-manager, connman or some other userspace application is starting a scan regularly.
Comment 4 Roland Vossen 2011-06-27 07:44:53 UTC
I started investigating this.
Comment 5 Roland Vossen 2011-06-29 12:16:12 UTC
Problem solved, patch to appear as part of a patch train shortly.
Comment 6 Florian Mickler 2011-08-08 08:18:54 UTC
A patch referencing this bug report has been merged in Linux v3.1-rc1:

commit 37c962d195005d009e130e65a9e55960996c3cab
Author: Roland Vossen <rvossen@broadcom.com>
Date:   Wed Jun 29 16:48:22 2011 -0700

    staging: brcm80211: fix for reported log spam problem

Note You need to log in before you can comment on or make changes to this bug.